k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyosk-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyosk-backend
  template:
    metadata:
      labels:
        app: kyosk-backend
    spec:
      #imagePullSecrets:
      #- name: ghcr-secret
      containers:
      - name: kyosk-backend
        image: ghcr.io/oumadennisomondi/kyosk-backend:b1195aca9c350c3351e706e029b59738ffdb6a7b
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "250Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyosk-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyosk-frontend
  template:
    metadata:
      labels:
        app: kyosk-frontend
    spec:
      #imagePullSecrets:
      #- name: ghcr-secret
      containers:
      - name: kyosk-frontend
        image: ghcr.io/oumadennisomondi/kyosk-frontend:b1195aca9c350c3351e706e029b59738ffdb6a7b
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "250Mi"
